methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:5: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    if (isFacingTrail()==true){
                     ^SlugSnail:15: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if (isFacingTrail()==true){
                       ^